# taxless

./: .gitignore  LICENSE  README.md
app/: Cargo.toml
app/src/: main.rs
app/src/backend/: pages.rs  requests.rs
app/src/frontend/css/: index.css
app/src/frontend/js/: index.js
app/templates/: dve_percenta.html.tera  index.html.tera  pouzivatelsky_panel.html.tera  prihlasenie.html.tera  zuctovanie_ziadost.html.tera
app/templates/general/: footer.html.tera  head.html.tera  header.html.tera  nav_panel.html.tera  scripts.html.tera  theme_switch.html.tera
concept/FS/: book.toml
concept/FS/src/: SUMMARY.md  base.md  zuctovanie_formular.md
deployment/: app-build.sh
graphics/icons/: placeholder.txt
testing/: cypress.config.ts  package-lock.json  package.json  tsconfig.json
testing/cypress/e2e/modules/: base.sy.ts
testing/cypress/e2e/workflows/: base.cy.ts
testing/cypress/support/: commands.ts  page_names.ts  page_objects.ts
testing/cypress/support/page_objects/: homepage.ts
