[package]
name = "taxless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0"
features = ["secrets"]

tera = "1.19.1"

[dependencies.rocket_dyn_templates]
version = "=0.1.0"
features = ["tera"]
